Adjusted dependencies of the project

--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "zod": "^4.3.6"
-  },
-  "devDependencies": {
     "json-server": "^0.17.4",
-    "local-web-server": "^5.4.0"
+    "local-web-server": "^5.4.0",
+    "zod": "^4.3.6"
   }
 }
