--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Responsive Product Card",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/ws --spa index.html && ./node_modules/.bin/json-server --watch api/db.json",
+    "start": "json-server --watch api/db.json && ws --spa --port $PORT --hostname 0.0.0.0 index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
