--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Responsive Product Card",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch api/db.json --static ./public --port $PORT",
+    "start": "json-server --watch api/db.json --static ./public",
     "dev": "json-server --watch api/db.json --static ./public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
