--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "json-server --watch api/db.json --static ./public --port $PORT --host 0.0.0.0",
     "dev": "json-server --watch api/db.json --static ./public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "redeploy": "git commit --allow-empty -m \"Forcing Heroku deployment\" && git push heroku main"
   },
   "keywords": [],
   "author": "",
